[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ghost.gd" type="Script" id=2]
[ext_resource path="res://Sounds/mixkit-game-ball-tap-2073.wav" type="AudioStream" id=3]
[ext_resource path="res://StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Ghost/StateMachine/Idle.gd" type="Script" id=5]
[ext_resource path="res://Ghost/StateMachine/Walk.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=2]
height = 12.0

[sub_resource type="CircleShape2D" id=3]

[node name="Ghost" groups=["ghosts"] instance=ExtResource( 1 )]
script = ExtResource( 2 )
speed = 60
run_speed = 80

[node name="CollisionShape2D" parent="." index="0"]
visible = false

[node name="AnimatedSprite" parent="." index="1"]
position = Vector2( 0, -2 )
scale = Vector2( 0.201797, 0.222344 )
frame = 4

[node name="Label" parent="." index="2"]
visible = false

[node name="StateMachine" type="Node" parent="." index="3"]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 5 )

[node name="Walk" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 6 )

[node name="HitRunTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="HitStunTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="HitVisibilityTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="HitTickTimer" type="Timer" parent="." index="7"]

[node name="KillRunTimer" type="Timer" parent="." index="8"]
one_shot = true

[node name="Health" type="Label" parent="." index="9"]
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hurtbox" type="Area2D" parent="." index="10"]
collision_layer = 256
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." index="11"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="SoundHealthDown" type="AudioStreamPlayer" parent="." index="12"]
stream = ExtResource( 3 )
volume_db = -10.065
pitch_scale = 1.53

[node name="ScaryAura" type="Area2D" parent="." index="13"]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaryAura" index="0"]
visible = false
shape = SubResource( 3 )

[connection signal="timeout" from="HitRunTimer" to="." method="_on_HitRunTimer_timeout"]
[connection signal="timeout" from="HitStunTimer" to="." method="_on_HitStunTimer_timeout"]
[connection signal="timeout" from="HitVisibilityTimer" to="." method="_on_HitVisibilityTimer_timeout"]
[connection signal="timeout" from="HitTickTimer" to="." method="_on_HitTickTimer_timeout"]
[connection signal="timeout" from="KillRunTimer" to="." method="_on_KillRunTimer_timeout"]
